Fix h1 and h2 text align in ebooks.

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,7 @@ body
 
 h1
 { font-weight: bold;
+  text-align: left;
   margin-top: 3rem;
   margin-bottom: 8rem;
   font-size: 2rem;
@@ -86,6 +87,7 @@ span.center-section
 
 .caps-section h2
 { font-size: 1.2rem;
+  text-align: left;
   text-transform: uppercase;
   font-weight: normal;
   margin-top: 3rem;
